# simply-streaming

./: .gitignore  README.md  chat_server.py  pyproject.toml
clients/: simple_chat.py
streaming/agent/: chatgpt.py  context.py
streaming/bot/: chat.py
