[tool.poetry]
name = "simply-streaming"
version = "0.1.0"
description = "simple streaming in a voicebot"
authors = ["Manas <manas.gooner11@gmail.com>"]
readme = "README.md"
packages = [{include = "streaming"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
websockets = "^12.0"
openai = "^1.13.3"
prompt-toolkit = "^3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
